--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,16 +6,23 @@ on:
   pull_request:
     branches: [ master ]
 
+env:
+  JAVA_VERSION: 17
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 17
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Configure JDK
         uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
-          java-version: 17
+          java-version: ${{ env.JAVA_VERSION }}
       - name: Build with Gradle
         run: ./gradlew build
