--- a/gradle.properties
+++ b/gradle.properties
@@ -18,12 +18,11 @@ android.useAndroidX = true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style   = official
 
-android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
 
-VERSION_NAME=2.2.0
-VERSION_CODE=11
+VERSION_NAME=2.3.0
+VERSION_CODE=12
 GROUP=com.github.jenly1314.WeChatQRCode
 
 POM_DESCRIPTION=Wechat QRCode
@@ -43,7 +42,7 @@ POM_DEVELOPER_ID=jenly
 POM_DEVELOPER_NAME=Jenly Yu
 POM_DEVELOPER_URL=https://github.com/jenly1314/
 
-SONATYPE_HOST=S01
+SONATYPE_HOST=CENTRAL_PORTAL
 
 RELEASE_REPOSITORY_URL=https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/
 SNAPSHOT_REPOSITORY_URL=https://s01.oss.sonatype.org/content/repositories/snapshots/
