--- a/opencv/build.gradle
+++ b/opencv/build.gradle
@@ -161,7 +161,7 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
-    lintOptions {
+    lint {
         abortOnError false
     }
 }
