--- a/versions.gradle
+++ b/versions.gradle
@@ -1,7 +1,7 @@
 //App
 def app_version = [:]
-app_version.versionCode = 11
-app_version.versionName = "2.2.0"
+app_version.versionCode = 12
+app_version.versionName = "2.3.0"
 ext.app_version = app_version
 
 def opencv_version = [:]
@@ -20,19 +20,19 @@ ext.build_versions = build_versions
 // App dependencies
 def versions = [:]
 
-versions.appcompat = "1.2.0"
-versions.coreKtx = "1.9.0"
-versions.material = "1.2.1"
-versions.constraintlayout = "2.0.4"
+versions.appcompat = "1.3.0"
+versions.coreKtx = "1.12.0"
+versions.material = "1.12.0"
+versions.constraintlayout = "2.2.0"
 versions.junit = "4.13.2"
 versions.androidExtJunit = "1.1.3"
 versions.espressoCore = "3.4.0"
 
-versions.lifecycleKtx="2.3.1"
-versions.viewfinderview="1.2.0"
-versions.cameraScan="1.2.0"
-versions.logx = "1.0.1"
+versions.lifecycleKtx="2.8.7"
+versions.viewfinderview="1.4.0"
+versions.cameraScan="1.3.1"
+versions.logx = "1.2.0"
 
-versions.appDialog="1.2.0"
+versions.appdialog="1.2.0"
 
 ext.versions = versions
