--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,6 @@ plugins {
     id 'com.android.application' version '8.2.0' apply false
     id 'com.android.library' version '8.2.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.9.20' apply false
-    id 'org.jetbrains.dokka' version '1.9.20' apply false
+    id 'org.jetbrains.dokka' version '1.9.20'
     id 'com.vanniktech.maven.publish' version '0.33.0' apply false
 }
